# faster-molecular-hessians

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
envs/: environment-cpu.yml
jitterbug/: utils.py  version.py
jitterbug/model/: __init__.py  base.py  linear.py  linear_internals.py  mbtr.py
notebooks/: 0_get-exact-answer.ipynb
notebooks/1_explore-sampling-methods/: 0_random-directions-same-distance.ipynb  1_random-directions-variable-distance.ipynb  2_displace-along-axes.ipynb  README.md
notebooks/2_testing-fitting-strategies/: 0_fit-taylor-series.ipynb  1_fit-forcefield-using-mbtr.ipynb  README.md
notebooks/3_exact_answer_sensitivity/: 1_step_size.ipynb  2_compare_steps.ipynb  psi.20084.clean  psi.22456.clean  psi.6887.clean
notebooks/3_exact_answer_sensitivity/vib/: cache.0x+.json  cache.0x-.json  cache.0y+.json  cache.0y-.json  cache.0z+.json  cache.0z-.json  cache.1x+.json  cache.1x-.json  cache.1y+.json  cache.1y-.json  cache.1z+.json  cache.1z-.json  cache.2x+.json  cache.2x-.json  cache.2y+.json  cache.2y-.json  cache.2z+.json  cache.2z-.json  cache.eq.json
notebooks/data/: README.md
notebooks/data/structures/: butanol.json
notebooks/proof-of-concept/: 0_get-exact-answer.ipynb  1_compute-random-offsets.ipynb  2_approximate-hessians.ipynb  3_approximate-hessians-with-mbtr.ipynb  README.md  sne_0_get-exact-answer.ipynb  sne_1_compute-random-offsets.ipynb  sne_2_approximate-hessians.ipynb
tests/: test_utils.py
tests/models/: conftest.py  test_linear.py  test_mbtr.py
tests/models/files/: water_hf_def2-svpd-random-d=2.00e-02.db
(+41 files in other folders)
