[project]
name = "jitterbug"
version = "0.0.1"
authors = [
    { name = "Sarah Elliot", email = "elliot@anl.gov" },
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Faster Hessians through machine learning'
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["HPC", "AI", "Workflows", "Quantum Chemistry", "Chemical Engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colmena==0.5.*",
    "parsl>=2023.04",
    "ase==3.22.*",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ['jitterbug*']

[project.urls]
repository = "https://github.com/globus-labs/faster-molecular-hessians"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-forked',
    'pytest-timeout',
    'pytest-cov',
]
